--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10523,9 +10523,9 @@ body {
 .sidebar-sticky {
   position: -webkit-sticky;
   position: sticky;
-  top: 48px;
+  top: 125px;
   /* Height of navbar */
-  height: calc(100vh - 48px);
+  height: calc(100vh - 125px);
   padding-top: 0.5rem;
   overflow-x: hidden;
   overflow-y: auto;
@@ -10560,6 +10560,11 @@ body {
  * Navbar
  */
 
+.hello-line {
+  color: white;
+  display: inline-block;
+}
+
 .navbar-brand {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -10583,6 +10588,11 @@ body {
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
+}
+
+.site-name {
+  font-size: 1.5rem;
+  color: white;
 }
 
 /*
